src/test/ui/variance/variance-use-contravariant-struct-2.stderr
error: compilation successful
  --> $DIR/variance-use-contravariant-struct-2.rs:27:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

